--- a/self-assessment.html
+++ b/self-assessment.html
@@ -34,8 +34,7 @@
 	
   <h4>TIME TO COMPLETE: 5-10 minutes <br>
   </h4>
-<p>Please take a few minutes to provide some details about yourself and complete a brief self-assessment to prepare you for the online course.
-  You will also have an opportunity to establish personal learning goals  and explore hand-picked resources related to TB M&E and surveillance. <br>
+<p>Please take a few minutes to provide some details about  yourself and complete a brief self-assessment to prepare for the online course.  You will also have the chance to set personal learning goals and explore  hand-picked resources related to TB M&amp;E and Surveillance.<br>
   <br>
   <em>Note: It may take a few seconds to load depending on your network connection.</em></p>
 <iframe data-tally-src="https://tally.so/embed/mJq8EK?transparentBackground=1&dynamicHeight=1" loading="lazy" width="100%" height="1343" frameborder="0" marginheight="0" marginwidth="0" title="TB M&E Course: Self- Assessment"></iframe><script>var d=document,w="https://tally.so/widgets/embed.js",v=function(){"undefined"!=typeof Tally?Tally.loadEmbeds():d.querySelectorAll("iframe[data-tally-src]:not([src])").forEach((function(e){e.src=e.dataset.tallySrc}))};if("undefined"!=typeof Tally)v();else if(d.querySelector('script[src="'+w+'"]')==null){var s=d.createElement("script");s.src=w,s.onload=v,s.onerror=v,d.body.appendChild(s);}</script>
@@ -43,9 +42,10 @@
 </div>
 	<br>	
 <div id="footer">
-  <div class="content"><p>The TB DIAH project is part of USAID's performance-based measures to end TB—the Global Accelerator to End Tuberculosis. The  <a href="https://www.tbdiah.org/" target="_blank" rel="noreferrer noopener">TB DIAH website</a> features a data hub, guidance, and tools to support the work of the   global TB community. TB DIAH makes possible optimal analysis and use of   TB data to inform national TB programs, policies, and USAID-supported   interventions. <br>
-	    <br>
-This information was produced with the support of the <a href="https://www.usaid.gov/" target="_blank" rel="noreferrer noopener">United States Agency for International Development (USAID)</a> under the terms of the TB Data, Impact Assessment and Communications   Hub (TB DIAH) Associate Award No. 7200AA18LA00007. TB DIAH is   implemented by the University of North Carolina at Chapel Hill, in   partnership with John Snow, Inc. Views expressed are not necessarily   those of USAID or the United States government. </p></div></div>
+  <div class="content"><p>The TB Data, Impact Assessment and Communications Hub (TB  DIAH) project is part of USAID's performance-based measures to end TB—the  Global Accelerator to End Tuberculosis. The <a href="https://www.tbdiah.org/" target="_blank">TB DIAH website</a> features a data hub, guidance, and tools to support the work of the global TB  community. TB DIAH makes possible optimal analysis and use of TB data to inform  national TB programs, policies, and USAID-supported interventions. <br>
+      <br>
+This information was produced with the support of the <a href="https://www.usaid.gov/" target="_blank">United  States Agency for International Development (USAID)</a> under the terms of the TB Data, Impact Assessment and Communications Hub (TB  DIAH) Associate Award No. 7200AA18LA00007. TB DIAH is implemented by the  University of North Carolina at Chapel Hill, in partnership with John Snow,  Inc. Views expressed are not necessarily those of USAID or the United States  government.</p>
+</div></div>
 
 </body>
 </html>
