--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@ s0.parentNode.insertBefore(s1,s0);
 	  <div id="languages"> <a href="index.html">EN</a> | FR | PT | RU </div>
 		  </div></div>
 <div id="course-banner"><img src="images/web-banner2.png" width="100%" height="auto" alt="illustration of health care workers and data analyists from around the world"/>
-<div class="content">	<h1>Tuberculosis Monitoring, Evaluation and Surveillance</h1>
+<div class="content">	<h1>Tuberculosis Monitoring, Evaluation &amp; Surveillance</h1>
 	<h2>Using a Performance-based Monitoring and Evaluation Framework to Strengthen Tuberculosis Programming</h2>
 </div>
 </div>
@@ -43,19 +43,19 @@ s0.parentNode.insertBefore(s1,s0);
 <div id="playbook"><br>
 
   <h3>Course Description</h3>
-  <p>This online learning  experience is designed for dedicated professionals working to end tuberculosis  (TB) in their countries. It requires a basic understanding of TB monitoring and  evaluation (M&amp;E) and surveillance systems and explores how USAID's  performance-based M&amp;E framework (PBMEF) with standardized, high-quality  indicators can improve the generation of quality data and support the analysis,  interpretation, and use of that data to inform programming, identify gaps, and  strengthen the overall system.</p>
+  <p>This online learning  experience is designed for professionals working to end tuberculosis (TB). It requires a basic understanding of TB monitoring and  evaluation (M&amp;E) and surveillance systems. This course explores how USAID's  performance-based M&amp;E framework (PBMEF) can improve the generation of  quality data by using standardized, high-quality indicators. The PBMEF supports  the analysis, interpretation, and use of that data to inform programming,  identify gaps, and strengthen the overall system.</p>
  <h3>Course Objectives</h3> <div class="accordion-item">
     <div class="accordion-header">
 <p>After completing this course, you will be able to: <em><strong>(Click to view)</strong></em></p>
      <span class="accordion-icon"></span>
     </div>
     <div class="accordion-content">	<ul>
-  <li>Explain how the performance-based monitoring and evaluation  framework (PBMEF) with standardized indicators can strengthen a TB program by identifying gaps and charting paths toward improving the diagnosis, care,  treatment, and prevention of TB</li>
-  <li>Align a selection of standardized TB indicators with your country’s National Strategic Plan and/or programmatic priorities</li>
+  <li>Explain how the PBMEF with standardized indicators can strengthen a TB program by identifying gaps and charting paths toward improving the diagnosis, care, treatment, and prevention of TB</li>
+  <li>Select standardized TB indicators based on your country’s National Strategic Plan and/or programmatic priorities</li>
   <li>Apply cascade analysis to identify operational issues that are preventing a TB program from achieving intended targets, goals and objectives, and suggest strategies to address them</li>
   <li>Analyze, interpret, and synthesize TB data to develop M&amp;E reports with relevant visuals to engage stakeholders, and inform programmatic and policy decisions</li>
   <li>Create a presentation for stakeholders using TB data to recommend programmatic changes and address questions</li>
-  <li>Feel empowered/committed as an individual to make objective changes using PBMEF data to  improve the TB M&amp;E system in the country where you work</li>
+  <li>Feel empowered and committed as an individual to make objective changes using PBMEF data to  improve the TB M&amp;E system in the country where you work</li>
 </ul></div>
 </div>	
 </div>
@@ -80,7 +80,7 @@ s0.parentNode.insertBefore(s1,s0);
 	  <div class="modules">
 	    <h3 id="m1">MODULE 1: TB M&amp;E: An Overview</h3>
 	    <p><strong>🕓</strong><strong> Time to Complete</strong>: 10 minutes</p>
-	    <p><strong>Topics Covered</strong>: Global TB strategies and targets, M&amp;E frameworks and how patient pathways inform TB performance indicators. <strong>New to TB?</strong> be sure to check out our mini-module on <a href="https://360.articulate.com/review/content/1f72cd66-2f57-444a-8873-90dbfaa8860a/review" target="_blank">Basic Epidemiology of TB</a> and download the latest <a href="Tuberculosis-Case-Definitions.pdf" target="_blank">TB Case Definitions (PDF)</a></p>
+	    <p><strong>Topics Covered</strong>: Global TB strategies and targets, M&amp;E frameworks and how identification, diagnosis, treatment and prevention alogrithms inform TB performance indicators. <strong>New to TB?</strong> be sure to check out our mini-module on <a href="https://360.articulate.com/review/content/1f72cd66-2f57-444a-8873-90dbfaa8860a/review" target="_blank">Basic Epidemiology of TB</a> and download the latest <a href="Tuberculosis-Case-Definitions.pdf" target="_blank">TB Case Definitions (PDF)</a></p>
 		  <a class="button" href="https://360.articulate.com/review/content/d0ef2cc6-08bc-4b2c-87fc-4af0faa43334/review">View Module</a>
 	  </div></div>
 	</div> 
@@ -96,7 +96,7 @@ s0.parentNode.insertBefore(s1,s0);
 	</div>
 	</div> 
 	 	 	 <div class="section group"><hr>
-	<div class="col span_1_of_3"><div class="modules"><img src="images/mod3.png" width="1024" height="632" alt=""/></div></div>
+	<div class="col span_1_of_3"><div class="modules"><img src="images/mod3v2.png" width="1024" height="632" alt=""/></div></div>
 	<div class="col span_2_of_3">
 	  <div class="modules">
 	  <h3 id="m3">MODULE: 3: Data Quality, Analysis, and Interpretation</h3>
@@ -106,7 +106,7 @@ s0.parentNode.insertBefore(s1,s0);
 	</div></div>
 	</div> <hr>
 	 	 	 <div class="section group">
-	<div class="col span_1_of_3"><div class="modules"><img src="images/placeholder-photo.png" width="1680" height="840" alt=""/></div></div>
+	<div class="col span_1_of_3"><div class="modules"><img src="images/mod4.png" width="1024" height="632" alt=""/></div></div>
 	<div class="col span_2_of_3">
 	  <div class="modules">
 	  <h3 id="m4">MODULE 4: Data Communication and Use</h3>
@@ -116,7 +116,7 @@ s0.parentNode.insertBefore(s1,s0);
     </div>
 		</div></div>  <hr>
 	  	 	 	 <div class="section group">
-	<div class="col span_1_of_3"><div class="modules"><img src="images/evaluation.png" width="650" height="325" alt=""/></div></div>
+	<div class="col span_1_of_3"><div class="modules"><img src="images/final-exam.png" width="1024" height="632" alt=""/></div></div>
 	<div class="col span_2_of_3">
 	  <div class="modules">
 	  <h3>Final Exam and Course Evaluation</h3>
@@ -129,9 +129,9 @@ s0.parentNode.insertBefore(s1,s0);
 <br>
 <br>	
 <div id="footer">
-  <div class="content"><p>The TB DIAH project is part of USAID's performance-based measures to end TB—the Global Accelerator to End Tuberculosis. The  <a href="https://www.tbdiah.org/" target="_blank" rel="noreferrer noopener">TB DIAH website</a> features a data hub, guidance, and tools to support the work of the   global TB community. TB DIAH makes possible optimal analysis and use of   TB data to inform national TB programs, policies, and USAID-supported   interventions. <br>
-	    <br>
-This information was produced with the support of the <a href="https://www.usaid.gov/" target="_blank" rel="noreferrer noopener">United States Agency for International Development (USAID)</a> under the terms of the TB Data, Impact Assessment and Communications   Hub (TB DIAH) Associate Award No. 7200AA18LA00007. TB DIAH is   implemented by the University of North Carolina at Chapel Hill, in   partnership with John Snow, Inc. Views expressed are not necessarily   those of USAID or the United States government. </p></div></div>
+  <div class="content"><p>The TB Data, Impact Assessment and Communications Hub (TB  DIAH) project is part of USAID's performance-based measures to end TB—the  Global Accelerator to End Tuberculosis. The <a href="https://www.tbdiah.org/" target="_blank">TB DIAH website</a> features a data hub, guidance, and tools to support the work of the global TB  community. TB DIAH makes possible optimal analysis and use of TB data to inform  national TB programs, policies, and USAID-supported interventions. </p>
+    <p>This information was produced with the support of the <a href="https://www.usaid.gov/" target="_blank">United  States Agency for International Development (USAID)</a> under the terms of the TB Data, Impact Assessment and Communications Hub (TB  DIAH) Associate Award No. 7200AA18LA00007. TB DIAH is implemented by the  University of North Carolina at Chapel Hill, in partnership with John Snow,  Inc. Views expressed are not necessarily those of USAID or the United States  government.</p>
+</div></div>
       <script src="accordion.js" type="text/javascript"></script>	
 </body>
 </html>
