--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@ s0.parentNode.insertBefore(s1,s0);
 	</div>
 	</div> 
 	 	 	 <div class="section group"><hr>
-	<div class="col span_1_of_3"><div class="modules"><img src="images/mod3v2.png" width="1024" height="632" alt=""/></div></div>
+	<div class="col span_1_of_3"><div class="modules"><img src="images/mod3.png" width="1024" height="632" alt=""/></div></div>
 	<div class="col span_2_of_3">
 	  <div class="modules">
 	  <h3 id="m3">MODULE: 3: Data Quality, Analysis, and Interpretation</h3>
@@ -116,7 +116,7 @@ s0.parentNode.insertBefore(s1,s0);
     </div>
 		</div></div>  <hr>
 	  	 	 	 <div class="section group">
-	<div class="col span_1_of_3"><div class="modules"><img src="images/final-exam.png" width="1024" height="632" alt=""/></div></div>
+	<div class="col span_1_of_3"><div class="modules"><img src="images/evaluation.png" width="1024" height="632" alt=""/></div></div>
 	<div class="col span_2_of_3">
 	  <div class="modules">
 	  <h3>Final Exam and Course Evaluation</h3>
