--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@ s0.parentNode.insertBefore(s1,s0);
 	</div></div>
 	</div> <hr>
 	 	 	 <div class="section group">
-	<div class="col span_1_of_3"><div class="modules"><img src="images/placeholder-photo.png" width="1024" height="632" alt="illustration of a woman discussing cascades to a group of stakeholders"/></div></div>
+	<div class="col span_1_of_3"><div class="modules"><img src="images/mod4.png" width="1024" height="632" alt="illustration of a woman discussing cascades to a group of stakeholders"/></div></div>
 	<div class="col span_2_of_3">
 	  <div class="modules">
 	  <h3 id="m4">MODULE 4: Data Communication and Use</h3>
