--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@ s0.parentNode.insertBefore(s1,s0);
 <div id="playbook"><br>
 
   <h3>Course Description</h3>
-  <p>This online learning  experience is designed for professionals working to end tuberculosis (TB). It requires a basic understanding of TB monitoring and  evaluation (M&amp;E) and surveillance systems. This course explores how USAID's  performance-based M&amp;E framework (PBMEF) can improve the generation of  quality data by using standardized, high-quality indicators. The PBMEF supports  the analysis, interpretation, and use of that data to inform programming,  identify gaps, and strengthen the overall system.</p>
+  <p>This online learning experience is designed for professionals working to end tuberculosis (TB) in their countries. It requires a basic understanding of TB monitoring and evaluation (M&E) and surveillance systems. The course explores how USAID's performance-based M&E framework (PBMEF) can improve the generation of quality data by using standardized, high-quality TB indicators. The PBMEF supports the analysis, interpretation, and use of that data to inform programming, identify gaps, and strengthen the overall system.</p>
  <h3>Course Objectives</h3> <div class="accordion-item">
     <div class="accordion-header">
 <p>After completing this course, you will be able to: <em><strong>(Click to view)</strong></em></p>
@@ -52,10 +52,9 @@ s0.parentNode.insertBefore(s1,s0);
     <div class="accordion-content">	<ul>
   <li>Explain how the PBMEF with standardized indicators can strengthen a TB program by identifying gaps and charting paths toward improving the diagnosis, care, treatment, and prevention of TB</li>
   <li>Select standardized TB indicators based on your country’s National Strategic Plan and/or programmatic priorities</li>
-  <li>Apply cascade analysis to identify operational issues that are preventing a TB program from achieving intended targets, goals and objectives, and suggest strategies to address them</li>
-  <li>Analyze, interpret, and synthesize TB data to develop M&amp;E reports with relevant visuals to engage stakeholders, and inform programmatic and policy decisions</li>
-  <li>Create a presentation for stakeholders using TB data to recommend programmatic changes and address questions</li>
-  <li>Feel empowered and committed as an individual to make objective changes using PBMEF data to  improve the TB M&amp;E system in the country where you work</li>
+  <li>Apply cascade analysis to identify operational issues that are preventing a TB program from achieving intended targets, goals, and objectives and suggest strategies to address them</li>
+  <li>Analyze, interpret, and synthesize TB data to develop M&E reports with relevant visuals to engage stakeholders, and inform programmatic and policy decisions</li>
+  <li>Feel empowered and committed to make objective changes using PBMEF data to improve the TB M&E system in the country where you work</li>
 </ul></div>
 </div>	
 </div>
@@ -129,8 +128,9 @@ s0.parentNode.insertBefore(s1,s0);
 <br>
 <br>	
 <div id="footer">
-  <div class="content"><p>The TB Data, Impact Assessment and Communications Hub (TB  DIAH) project is part of USAID's performance-based measures to end TB—the  Global Accelerator to End Tuberculosis. The <a href="https://www.tbdiah.org/" target="_blank">TB DIAH website</a> features a data hub, guidance, and tools to support the work of the global TB  community. TB DIAH makes possible optimal analysis and use of TB data to inform  national TB programs, policies, and USAID-supported interventions. </p>
-    <p>This information was produced with the support of the <a href="https://www.usaid.gov/" target="_blank">United  States Agency for International Development (USAID)</a> under the terms of the TB Data, Impact Assessment and Communications Hub (TB  DIAH) Associate Award No. 7200AA18LA00007. TB DIAH is implemented by the  University of North Carolina at Chapel Hill, in partnership with John Snow,  Inc. Views expressed are not necessarily those of USAID or the United States  government.</p>
+  <div class="content"><p>The TB Data, Impact Assessment and Communications Hub (TB  DIAH) project is part of USAID's performance-based measures to end TB—the  Global Accelerator to End Tuberculosis. The <a href="https://www.tbdiah.org/" target="_blank">TB DIAH website</a> features a data hub, guidance, and tools to support the work of the global TB  community. TB DIAH makes possible optimal analysis and use of TB data to inform  national TB programs, policies, and USAID-supported interventions. <br>
+      <br>
+This information was produced with the support of the <a href="https://www.usaid.gov/" target="_blank">United  States Agency for International Development (USAID)</a> under the terms of the TB Data, Impact Assessment and Communications Hub (TB  DIAH) Associate Award No. 7200AA18LA00007. TB DIAH is implemented by the  University of North Carolina at Chapel Hill, in partnership with John Snow,  Inc. Views expressed are not necessarily those of USAID or the United States  government.</p>
 </div></div>
       <script src="accordion.js" type="text/javascript"></script>	
 </body>
