--- a/index.html
+++ b/index.html
@@ -73,24 +73,39 @@ s0.parentNode.insertBefore(s1,s0);
 		  <a class="button" href="self-assessment.html">TAKE ASSESSMENT</a>
 	  </div></div>
 	</div><hr>
-    <div class="section group">
+
+	      <div class="section group">
+	<div class="col span_1_of_3">
+	  <div class="modules"><img src="images/mod-0.png" alt=""/></div></div>
+
+		<div class="col span_2_of_3">
+	  <div class="modules">
+	    <h3 id="m1">MINI-MODULE: Basics of TB: Epidemiology &amp; Case Definitions (optional)</h3>
+	    <p><strong>🕓</strong><strong> Time to Complete</strong>: 10 minutes</p>
+	    <p><strong>New to TB?</strong> This mini-module provides the basic facts about the TB epidemic, the epidemiology of TB as it relates to monitoring, evaluation and surveillance and the latest WHO case classifications and definitions.</p>
+		  <a class="button" href="https://360.articulate.com/review/content/1f72cd66-2f57-444a-8873-90dbfaa8860a/review">View Module</a>
+	  </div></div>
+	</div> 
+	  <div class="section group">
 	<div class="col span_1_of_3"><div class="modules"><img src="images/mod1.png" alt=""/></div></div>
-	<div class="col span_2_of_3">
+
+		<div class="col span_2_of_3">
 	  <div class="modules">
 	    <h3 id="m1">MODULE 1: TB M&amp;E: An Overview</h3>
 	    <p><strong>🕓</strong><strong> Time to Complete</strong>: 10 minutes</p>
-	    <p><strong>Topics Covered</strong>: Global TB strategies and targets, M&amp;E frameworks and how identification, diagnosis, treatment and prevention alogrithms inform TB performance indicators. <strong>New to TB?</strong> be sure to check out our mini-module on <a href="https://360.articulate.com/review/content/1f72cd66-2f57-444a-8873-90dbfaa8860a/review" target="_blank">Basic Epidemiology of TB</a> and download the latest <a href="Tuberculosis-Case-Definitions.pdf" target="_blank">TB Case Definitions (PDF)</a></p>
+	    <p><strong>Topics Covered</strong>: WHO and USAID global TB strategies and targets, the basics of TB M&amp;E, including concepts such as M&amp;E systems, M&amp;E frameworks and illustrative TB indicator mapping to help contextualize the PBMEF. <strong> <br>
+	    </strong><a href="Tuberculosis-Case-Definitions.pdf" target="_blank"></a></p>
 		  <a class="button" href="https://360.articulate.com/review/content/d0ef2cc6-08bc-4b2c-87fc-4af0faa43334/review">View Module</a>
 	  </div></div>
 	</div> 
 	 	 	<hr> <div class="section group">
 	<div class="col span_1_of_3"><div class="modules"><img src="images/mod2.png" alt="placeholder"/></div></div>
 	<div class="col span_2_of_3"><div class="modules">
-      <h3 id="m2">MODULE 2: Using a Performance-Based M&amp;E Framework to Strengthen TB Programs</h3>
+      <h3 id="m2">MODULE 2: Using the Performance-Based M&amp;E Framework to Strengthen TB Programs</h3>
       <p>🕓<strong> Time to Complete</strong>: 20 minutes<br>
         <br>
         <strong>Topics Covered</strong>:
-		Components of USAID's performance-based M&amp;E frameworks, deep dive into 10 core indicators, indicators cascades</p>
+		Components of USAID's performance-based M&amp;E frameworks, the essential indicator list, a deep dive into USAID's Core indicators, and indicator cascades.</p>
 		  <a class="button" href="https://360.articulate.com/review/content/0eed2269-12a2-426f-b042-2f2f2e4306a0/review">View Module</a></div>
 	</div>
 	</div> 
@@ -101,7 +116,7 @@ s0.parentNode.insertBefore(s1,s0);
 	  <h3 id="m3">MODULE: 3: Data Quality, Analysis, and Interpretation</h3>
 	  <p><strong>🕓 Time to Complete</strong>: 45 minutes<br>
         <br>
-        <strong>Topics Covered:</strong> Components of data quality, data analysis, cascade analysis, root cause analysis</p>
+        <strong>Topics Covered:</strong> Components of data quality, data analysis, cascade analysis, and root cause analysis</p>
 	</div></div>
 	</div> <hr>
 	 	 	 <div class="section group">
@@ -111,7 +126,7 @@ s0.parentNode.insertBefore(s1,s0);
 	  <h3 id="m4">MODULE 4: Data Communication and Use</h3>
 	  <p><strong>🕓</strong><strong> Time to Complete</strong> 45 minutes<br>
 	    <br>
-	    <strong>Topics Covered:</strong> Stakeholder buy-in, disseminating M&amp;E results, barriers to data use</p>
+	    <strong>Topics Covered:</strong> Data demand and use, barriers to data use, data visualizations, stakeholder buy-in, and disseminating M&amp;E results</p>
     </div>
 		</div></div>  <hr>
 	  	 	 	 <div class="section group">
