--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@ s0.parentNode.insertBefore(s1,s0);
 	  <div class="modules">
 	    <h3 id="m1">MINI-MODULE: Basics of TB: Epidemiology &amp; Case Definitions (optional)</h3>
 	    <p><strong>🕓</strong><strong> Time to Complete</strong>: 10 minutes</p>
-	    <p><strong>New to TB?</strong> This mini-module provides the basic facts about the TB epidemic, the epidemiology of TB as it relates to monitoring, evaluation and surveillance and the latest WHO case classifications and definitions.</p>
+	    <p><strong>New to TB?</strong> This mini-module provides the basic facts about the TB epidemic, the epidemiology of TB as it relates to monitoring, evaluation and surveillance and the latest TB case classifications and definitions from WHO.</p>
 		  <a class="button" href="https://360.articulate.com/review/content/1f72cd66-2f57-444a-8873-90dbfaa8860a/review">View Module</a>
 	  </div></div>
 	</div> 
@@ -116,7 +116,7 @@ s0.parentNode.insertBefore(s1,s0);
 	  <h3 id="m3">MODULE: 3: Data Quality, Analysis, and Interpretation</h3>
 	  <p><strong>🕓 Time to Complete</strong>: 45 minutes<br>
         <br>
-        <strong>Topics Covered:</strong> Components of data quality, data analysis, cascade analysis, and root cause analysis</p>
+        <strong>Topics Covered:</strong> Components of data quality, data analysis, cascade analysis, and root cause analysis.</p>
 	</div></div>
 	</div> <hr>
 	 	 	 <div class="section group">
@@ -126,7 +126,7 @@ s0.parentNode.insertBefore(s1,s0);
 	  <h3 id="m4">MODULE 4: Data Communication and Use</h3>
 	  <p><strong>🕓</strong><strong> Time to Complete</strong> 45 minutes<br>
 	    <br>
-	    <strong>Topics Covered:</strong> Data demand and use, barriers to data use, data visualizations, stakeholder buy-in, and disseminating M&amp;E results</p>
+	    <strong>Topics Covered:</strong> Data demand and use, barriers to data use, data visualizations, stakeholder buy-in, and disseminating M&amp;E results.</p>
     </div>
 		</div></div>  <hr>
 	  	 	 	 <div class="section group">
