--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@ s0.parentNode.insertBefore(s1,s0);
 	    <p><strong>🕓</strong><strong> Time to Complete</strong>: 10 minutes</p>
 	    <p><strong>Topics Covered</strong>:  WHO and USAID global TB strategies and targets, the basics of TB M&amp;E, including concepts such as M&amp;E systems, M&amp;E frameworks and illustrative TB indicator mapping to help contextualize the PBMEF. <strong> <br>
 	    </strong><a href="Tuberculosis-Case-Definitions.pdf" target="_blank"></a></p>
-		  <a class="button" href="New: https://360.articulate.com/review/content/b7307cf6-5a72-458a-a300-2d1fff8c8327/review">View Module</a>
+		  <a class="button" href="https://360.articulate.com/review/content/b7307cf6-5a72-458a-a300-2d1fff8c8327/review">View Module</a>
 	  </div></div>
 	</div> 
 	 	 	<hr> <div class="section group">
