--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@ s0.parentNode.insertBefore(s1,s0);
 	  <p><strong>🕓 Time to Complete</strong>: 45 minutes<br>
         <br>
         <strong>Topics Covered:</strong> Components of data quality, data analysis, cascade analysis, and root cause analysis.</p>
-	</div></div>
+	 <a class="button" href="https://360.articulate.com/review/content/54b4e8b6-8f37-4ca3-bfe0-0861990dfe03/review">View Module</a></div></div>
 	</div> <hr>
 	 	 	 <div class="section group">
 	<div class="col span_1_of_3"><div class="modules"><img src="images/mod4.png" width="1024" height="632" alt="illustration of a woman discussing cascades to a group of stakeholders"/></div></div>
