--- a/resources.html
+++ b/resources.html
@@ -58,8 +58,6 @@ s0.parentNode.insertBefore(s1,s0);
   <li><a href="https://www.usaid.gov/global-health/health-areas/tuberculosis/resources/publications/usaid-global-tuberculosis-strategy-2023-2030" target="_blank">USAID&rsquo;s  Global Tuberculosis (TB) Strategy</a></li>
   <li><a href="https://www.stoptb.org/advocacy-and-communications/unhlm-tb-key-targets-and-commitments" target="_blank">UN  High-Level Meeting on TB Key Targets &amp; Commitments (6 languages)</a></li>
   <li><a href="https://www.who.int/publications/i/item/WHO-HTM-TB-2015.19" target="_blank">World  Health Organization (WHO): The End TB Strategy</a></li>
-  <li><a href="Tuberculosis-Case-Definitions.pdf" target="_blank">TB Case Definitions (PDF)</a>  *Update with WHO publication when ready</li>
-	
 </ul>
 <p><strong>Good to Know:</strong></p>
 <ul>
@@ -67,6 +65,7 @@ s0.parentNode.insertBefore(s1,s0);
   <li><a href="https://hub.tbdiah.org/dashboards/countries" target="_blank">TB DIAH Country Dashboards</a></li>
   <li><a href="https://www.paho.org/en/topics/tuberculosis" target="_blank">PAHO&rsquo;s TB page</a></li>
   <li><a href="https://www.who.int/teams/global-tuberculosis-programme/data" target="_blank">WHO  Global Tuberculosis Report</a></li>
+  <li><a href="https://tbdictionary.org/" target="_blank">Global TB Dictionary</a></li>
 </ul>
 <p><br>
   <strong>Complementary Courses:</strong></p>
@@ -156,6 +155,7 @@ s0.parentNode.insertBefore(s1,s0);
         </li>
            <li><a href="https://openwho.org/channels/end-tb" target="_blank">END TB Channel</a>
         </li>
+		<li><a href="Tuberculosis-Case-Definitions.pdf" target="_blank">TB Case Definitions (PDF)</a>  *Update with WHO publication when ready</li>
       </ul>
     </div>
   </div>	
