--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@ s0.parentNode.insertBefore(s1,s0);
 	</div>
 	</div> 
 	 	 	 <div class="section group"><hr>
-	<div class="col span_1_of_3"><div class="modules"><img src="images/mod3.png" width="1024" height="632" alt=""/></div></div>
+	<div class="col span_1_of_3"><div class="modules"><img src="images/mod3-v2.png" width="1024" height="632" alt=""/></div></div>
 	<div class="col span_2_of_3">
 	  <div class="modules">
 	  <h3 id="m3">MODULE: 3: Data Quality, Analysis, and Interpretation</h3>
