--- a/index.html
+++ b/index.html
@@ -110,14 +110,14 @@ s0.parentNode.insertBefore(s1,s0);
 	</div>
 	</div> 
 	 	 	 <div class="section group"><hr>
-	<div class="col span_1_of_3"><div class="modules"><img src="images/mod3-v2.png" width="1024" height="632" alt=""/></div></div>
+	<div class="col span_1_of_3"><div class="modules"><img src="images/mod3-v2.png" alt=""/></div></div>
 	<div class="col span_2_of_3">
 	  <div class="modules">
 	  <h3 id="m3">MODULE: 3: Data Quality, Analysis, and Interpretation</h3>
 	  <p><strong>🕓 Time to Complete</strong>: 45 minutes<br>
         <br>
         <strong>Topics Covered:</strong> Components of data quality, data analysis, cascade analysis, and root cause analysis.</p>
-	 <a class="button" href="https://360.articulate.com/review/content/54b4e8b6-8f37-4ca3-bfe0-0861990dfe03/review">View Module</a></div></div>
+	   <a class="button" href="https://360.articulate.com/review/content/54b4e8b6-8f37-4ca3-bfe0-0861990dfe03/review">TB Data ANalysis</a><a class="button" href="#">TB Data Quality</a> </div></div>
 	</div> <hr>
 	 	 	 <div class="section group">
 	<div class="col span_1_of_3"><div class="modules"><img src="images/mod4.png" width="1024" height="632" alt="illustration of a woman discussing cascades to a group of stakeholders"/></div></div>
@@ -125,7 +125,7 @@ s0.parentNode.insertBefore(s1,s0);
 	  <div class="modules">
 	  <h3 id="m4">MODULE 4: Data Communication and Use</h3>
 	  <p><strong>🕓</strong><strong> Time to Complete</strong> 45 minutes<br>
-	    <br>
+	  <br>
 	    <strong>Topics Covered:</strong> Data demand and use, barriers to data use, data visualizations, stakeholder buy-in, and disseminating M&amp;E results.</p>
     </div>
 		</div></div>  <hr>
