--- a/resources.html
+++ b/resources.html
@@ -44,7 +44,7 @@ s0.parentNode.insertBefore(s1,s0);
 
 	<div id="breadcrumbs"> <a href="index.html">Course Home</a> »  Pre-Reading </div>
 
-<h2>Optional Pre-Reading</h2>
+<h2>TB M&amp;E Resources (Optional Pre-Reading)</h2>
 	<p> If you scored below 50 on your self-assessment, you may want to review the resources below. Some of these resources will also be available in the course.</p>
 	<div class="accordion">
   <div class="accordion-item">
@@ -154,7 +154,8 @@ s0.parentNode.insertBefore(s1,s0);
         </li>
            <li><a href="https://openwho.org/channels/end-tb" target="_blank">END TB Channel</a>
         </li>
-		<li><a href="Tuberculosis-Case-Definitions.pdf" target="_blank">TB Case Definitions (PDF)</a> * Update with WHO publication when ready</li>
+		<li><a href="Tuberculosis-Case-Definitions.pdf" target="_blank">TB Case Definitions (PDF)</a><br>
+ Based on updates from WHO's "<a href="https://www.who.int/publications/i/item/9789240075290" target="_blank">Consolidated guidance on tuberculosis data generation and use: module 1: tuberculosis surveillance (2024)</a>"</li>
 		    <li><a href="https://tbdictionary.org/" target="_blank">Global TB Dictionary</a></li>
       </ul>
     </div>
