updated home page

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@ s0.parentNode.insertBefore(s1,s0);
 		  </div></div>
 <div id="course-banner"><img src="images/web-banner2.png" width="100%" height="auto" alt="illustration of health care workers and data analyists from around the world"/>
 <div class="content">	<h1>Tuberculosis Monitoring, Evaluation &amp; Surveillance</h1>
-	<h2>Using a Performance-based Monitoring and Evaluation Framework to Strengthen Tuberculosis Programming</h2>
+	<h2>Using USAID's Performance-Based Monitoring and Evaluation Framework to Strengthen Tuberculosis Programming</h2>
 </div>
 </div>
 	
@@ -42,7 +42,7 @@ s0.parentNode.insertBefore(s1,s0);
 <div id="playbook"><br>
 
   <h3>Course Description</h3>
-  <p>This online learning experience is designed for professionals working to end tuberculosis (TB) in their countries. It requires a basic understanding of TB monitoring and evaluation (M&E) and surveillance systems. The course explores how USAID's performance-based M&E framework (PBMEF) can improve the generation of quality data by using standardized, high-quality TB indicators. The PBMEF supports the analysis, interpretation, and use of that data to inform programming, identify gaps, and strengthen the overall system.</p>
+  <p>This online learning experience is designed for professionals working to end tuberculosis (TB) in their countries. It requires a basic understanding of TB monitoring and evaluation (M&E) and surveillance systems. The course explores how USAID's Performance-Based M&E Framework (PBMEF) can improve the generation of quality data by using standardized, high-quality TB indicators. The PBMEF supports the analysis, interpretation, and use of that data to inform programming, identify gaps, and strengthen the overall system.</p>
  <h3>Course Objectives</h3> <div class="accordion-item">
     <div class="accordion-header">
 <p>After completing this course, you will be able to: <em><strong>(Click to view)</strong></em></p>
@@ -104,7 +104,7 @@ s0.parentNode.insertBefore(s1,s0);
       <p>🕓<strong> Time to Complete</strong>: 20 minutes<br>
         <br>
         <strong>Topics Covered</strong>:
-		Components of USAID's performance-based M&amp;E framework, the essential indicator list, a deep dive into USAID's 10 Core indicators, and indicator cascades.</p>
+		Components of USAID's Performance-Based M&amp;E framework, the essential indicator list, a deep dive into USAID's 10 Core indicators, and indicator cascades.</p>
 		  <a class="button" href="https://360.articulate.com/review/content/0eed2269-12a2-426f-b042-2f2f2e4306a0/review">View Module</a></div>
 	</div>
 	</div> 
