--- a/resources.html
+++ b/resources.html
@@ -37,7 +37,7 @@ s0.parentNode.insertBefore(s1,s0);
 <div id="course-banner"><img src="images/web-banner2.png" width="100%" height="auto" alt="illustration of health care workers and data analyists from around the world"/>
   <div class="content">
     <h1>Tuberculosis Monitoring, Evaluation and Surveillance</h1>
-    <h2>Using a Performance-based M&amp;E Framework to Strengthen TB Programming</h2>
+    <h2>Using USAID's Performance-Based Monitoring and Evaluation Framework to Strengthen Tuberculosis Programming</h2>
   </div>
 </div>
 <div class="content"><br>
