--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@ s0.parentNode.insertBefore(s1,s0);
 	  <p><strong>🕓 Time to Complete</strong>: 45 minutes<br>
         <br>
         <strong>Topics Covered:</strong> Components of data quality, data analysis, cascade analysis, and root cause analysis.</p>
-	   <a class="button" href="https://360.articulate.com/review/content/54b4e8b6-8f37-4ca3-bfe0-0861990dfe03/review">TB Data ANalysis</a><a class="button" href="#">TB Data Quality</a> </div></div>
+	   <a class="button" href="https://360.articulate.com/review/content/54b4e8b6-8f37-4ca3-bfe0-0861990dfe03/review">TB Data ANalysis</a><a class="button" href="https://360.articulate.com/review/content/b2852e58-9299-47ed-8191-8ae8cf92e0d6/review">TB Data Quality</a> </div></div>
 	</div> <hr>
 	 	 	 <div class="section group">
 	<div class="col span_1_of_3"><div class="modules"><img src="images/mod4.png" width="1024" height="632" alt="illustration of a woman discussing cascades to a group of stakeholders"/></div></div>
