update course evaluation links

--- a/index.html
+++ b/index.html
@@ -137,6 +137,7 @@ s0.parentNode.insertBefore(s1,s0);
 	  <p><strong>🕓</strong><strong> Time to Complete: </strong>15 minutes</p>
 	  <p>Pass the final exam and complete the course evaluation to receive a certificate of completion.<br>
 	    </p>
+	 <a class="button" href="course-evaluation.html">Course Evaluation</a>
       </div>
 		</div></div> 
 </div></div>
