--- a/course-evaluation.html
+++ b/course-evaluation.html
@@ -24,19 +24,13 @@
   </div>
 </div>
 	<div id="course-banner"><img src="images/web-banner2.png" width="100%" height="auto" alt="illustration of health care workers and data analyists from around the world"/>
-<div class="content">	<h1>TB M&amp;E e-Learning: Course Evaluation</h1>
-	<h2>Using USAID's Performance-Based Monitoring and Evaluation Framework to Strengthen Tuberculosis Programming</h2>
+<div class="content">	<h1>TB M&amp;E Course Evaluation
+</h1>
 </div>
 </div>
-<div class="content"><br>
-
-  <div id="breadcrumbs"> <a href="index.html">Course Home</a> »  Self- Assessment </div>
-	
-  <h4>TIME TO COMPLETE: 10-15 minutes <br>
-  </h4>
-<p>Please take a few minutes to share your feedback with us to help improve our online courses. For each question below, select the response that most accurately reflects your assessment of the course.<br>
-  <br>
-  <em>Note: It may take a few seconds to load  depending on your network connection.</em></p>
+<div class="content"><strong><br>
+  TIME TO COMPLETE: 10-15 minutes </strong><br>
+<p>Please take a few minutes to share your feedback with us to help improve our online courses. For each question below, select the response that most accurately reflects your assessment of the course. (<em>Note: It may take a few seconds to load  depending on your network connection.</em>)</p>
 <iframe data-tally-src="https://tally.so/embed/3yDLy0?alignLeft=1&hideTitle=1&transparentBackground=1&dynamicHeight=1" loading="lazy" width="100%" height="3405" frameborder="0" marginheight="0" marginwidth="0" title="Course Evaluation"></iframe><script>var d=document,w="https://tally.so/widgets/embed.js",v=function(){"undefined"!=typeof Tally?Tally.loadEmbeds():d.querySelectorAll("iframe[data-tally-src]:not([src])").forEach((function(e){e.src=e.dataset.tallySrc}))};if("undefined"!=typeof Tally)v();else if(d.querySelector('script[src="'+w+'"]')==null){var s=d.createElement("script");s.src=w,s.onload=v,s.onerror=v,d.body.appendChild(s);}</script>
 </div>
 	<br>	
