--- a/final-exam.html
+++ b/final-exam.html
@@ -24,17 +24,16 @@
   </div>
 </div>
 	<div id="course-banner">
-	  <div class="content">	<h1>TB M&amp;E e-Learning: Course Evaluation</h1>
+	  <div class="content">	<h1>TB M&amp;E e-Learning: Final Exam</h1>
 	<h2>Using USAID's Performance-Based Monitoring and Evaluation Framework to Strengthen Tuberculosis Programming</h2>
 </div>
 </div>
 
 <div class="content"><strong><br>
   </strong>
-  <div id="breadcrumbs"> <a href="index.html">Course Home</a> »  Course Evaluation</div>
-  <strong>TIME TO COMPLETE: 10-15 minutes </strong><br>
-<p>Please take a few minutes to share your feedback with us to help improve our online courses. For each question below, select the response that most accurately reflects your assessment of the course. (<em>Note: It may take a few seconds to load  depending on your network connection.</em>)</p>
-<iframe data-tally-src="https://tally.so/embed/3yDLy0?alignLeft=1&hideTitle=1&transparentBackground=1&dynamicHeight=1" loading="lazy" width="100%" height="3405" frameborder="0" marginheight="0" marginwidth="0" title="Course Evaluation"></iframe><script>var d=document,w="https://tally.so/widgets/embed.js",v=function(){"undefined"!=typeof Tally?Tally.loadEmbeds():d.querySelectorAll("iframe[data-tally-src]:not([src])").forEach((function(e){e.src=e.dataset.tallySrc}))};if("undefined"!=typeof Tally)v();else if(d.querySelector('script[src="'+w+'"]')==null){var s=d.createElement("script");s.src=w,s.onload=v,s.onerror=v,d.body.appendChild(s);}</script>
+  <div id="breadcrumbs"> <a href="index.html">Course Home</a> »  Final Exam</div>
+  <strong>TIME TO COMPLETE: 15 minutes </strong><br>
+<p>TBD</p><script>var d=document,w="https://tally.so/widgets/embed.js",v=function(){"undefined"!=typeof Tally?Tally.loadEmbeds():d.querySelectorAll("iframe[data-tally-src]:not([src])").forEach((function(e){e.src=e.dataset.tallySrc}))};if("undefined"!=typeof Tally)v();else if(d.querySelector('script[src="'+w+'"]')==null){var s=d.createElement("script");s.src=w,s.onload=v,s.onerror=v,d.body.appendChild(s);}</script>
 </div>
 	<br>	
 <div id="footer">
