--- a/self-assessment.html
+++ b/self-assessment.html
@@ -22,8 +22,8 @@
   <div class="content"><a href="index.html"><img alt="logos" src="images/USAID_TB DIAH_vert.svg"></a>
   </div>
 </div>
-	<div id="course-banner"><img src="images/web-banner2.png" width="100%" height="auto" alt="illustration of health care workers and data analyists from around the world"/>
-<div class="content">	<h1>TB M&amp;E e-Learning: Self-Assessment</h1>
+	<div id="course-banner">
+	  <div class="content">	<h1>TB M&amp;E e-Learning: Self-Assessment</h1>
 	<h2>Using USAID's Performance-Based Monitoring and Evaluation Framework to Strengthen Tuberculosis Programming</h2>
 </div>
 </div>
