--- a/index.html
+++ b/index.html
@@ -2,12 +2,12 @@
 <html>
 <head>
 <meta charset="utf-8">
-<meta property="og:title" content="M&amp;E and Surveillance of TB Programs" />
+<meta property="og:title" content="Tuberculosis Monitoring, Evaluation and Surveillance" />
 <meta property="og:image" content="to add "/>
 <meta name="description" content="to add" />
-<meta name="keywords" content="TB, tuberculosis, TB DIAH, USAID, monitoring and evaluation of TB programs" />
+<meta name="keywords" content="TB, tuberculosis, TB DIAH, USAID, PBMEF, TB M&E, monitoring and evaluation of TB programs" />
 <meta http-equiv="content-language" content="en">
-<title>Online Learning: M&amp;E of TB Programs</title>
+<title>Online Learning: TB Monitoring, Evaluation and Surveillance</title>
 <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Lexend:wght@200;300;400;500;600;700;800&family=Libre+Franklin:ital,wght@0,300;0,400;0,500;0,700;0,800;1,300;1,400;1,600;1,700&family=Montserrat:ital,wght@0,300;0,400;0,500;0,600;0,700;1,400&display=swap" rel="stylesheet"> 
