update index links

--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@ s0.parentNode.insertBefore(s1,s0);
 	    <h3 id="m1">MINI-MODULE: Basics of TB: Epidemiology &amp; Case Definitions (optional)</h3>
 	    <p><strong>🕓</strong><strong> Time to Complete</strong>: 10 minutes</p>
 	    <p><strong>New to TB?</strong> This mini-module provides the basic facts about the TB epidemic, the epidemiology of TB as it relates to monitoring, evaluation and surveillance and the latest TB case classifications and definitions from the <a href="https://www.who.int/health-topics/tuberculosis#tab=tab_1" target="_blank">World Health Organization (WHO)</a>.</p>
-		  <a class="button" href="https://360.articulate.com/review/content/1f72cd66-2f57-444a-8873-90dbfaa8860a/review">View Module</a>
+		  <a class="button" href="https://360.articulate.com/review/content/1f72cd66-2f57-444a-8873-90dbfaa8860a/review">Review Module</a> <a class="button" href="M1-mini-module/index.html#/">View Module</a>
 	  </div></div>
 	</div> 
 	  <div class="section group">
@@ -94,7 +94,7 @@ s0.parentNode.insertBefore(s1,s0);
 	    <p><strong>🕓</strong><strong> Time to Complete</strong>: 10 minutes</p>
 	    <p><strong>Topics Covered</strong>:  WHO and USAID global TB strategies and targets, the basics of TB M&amp;E, including concepts such as M&amp;E systems, M&amp;E frameworks and illustrative TB indicator mapping to help contextualize the PBMEF. <strong> <br>
 	    </strong><a href="Tuberculosis-Case-Definitions.pdf" target="_blank"></a></p>
-		  <a class="button" href="https://360.articulate.com/review/content/d0ef2cc6-08bc-4b2c-87fc-4af0faa43334/review">View Module</a>
+		  <a class="button" href="https://360.articulate.com/review/content/d0ef2cc6-08bc-4b2c-87fc-4af0faa43334/review">Review Module</a>   <a class="button" href="M1/index.html">View Module</a>
 	  </div></div>
 	</div> 
 	 	 	<hr> <div class="section group">
