--- a/M1/index.html
+++ b/M1/index.html
@@ -11,6 +11,8 @@
     <script type="text/javascript" src="lib/player-0.0.11.min.js"></script>
     <script type="text/javascript" src="lib/lzwcompress.js"></script>
 
+    <!-- Tally PopUp -->
+	  <script async src="https://tally.so/widgets/embed.js"></script>
     <!-- Resize Hack -->
     <script type="text/javascript">
       window.resizeTo(screen.width, screen.height);
@@ -21,7 +23,7 @@
     <![endif]-->
 
     <script id="__ENTRY__" type="application/json">
-      {".js":["rise/1cff43f8.js"]}
+      {".js":["rise/e9847ca9.js"]}
     </script>
 
     <script id="__REMOTE_ENTRIES__" type="application/json">
