--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@ s0.parentNode.insertBefore(s1,s0);
         <br>
         <strong>Topics Covered</strong>:
 		Components of USAID's Performance-Based M&amp;E framework, the essential indicator list, a deep dive into USAID's 10 Core indicators, and indicator cascades.</p>
-		  <a class="button" href="https://360.articulate.com/review/content/0eed2269-12a2-426f-b042-2f2f2e4306a0/review">View Module 2</a></div>
+		  <a class="button" href="https://360.articulate.com/review/content/0eed2269-12a2-426f-b042-2f2f2e4306a0/review">REView Module 2</a></div>
 	</div>
 	</div> 
 	 	 	 <div class="section group"><hr>
@@ -116,7 +116,7 @@ s0.parentNode.insertBefore(s1,s0);
 	  <p><strong>🕓 Time to Complete</strong>: 45 minutes<br>
         <br>
         <strong>Topics Covered:</strong> Components of data quality, data analysis, cascade analysis, and root cause analysis.</p>
-	   <a class="button" href="https://360.articulate.com/review/content/54b4e8b6-8f37-4ca3-bfe0-0861990dfe03/review">3.1 TB Data ANalysis</a><a class="button" href="https://360.articulate.com/review/content/b2852e58-9299-47ed-8191-8ae8cf92e0d6/review">3.2 TB Data Quality</a> </div></div>
+	   <a class="button" href="https://360.articulate.com/review/content/54b4e8b6-8f37-4ca3-bfe0-0861990dfe03/review">REVIEW 3.1 TB Data ANalysis</a><a class="button" href="https://360.articulate.com/review/content/b2852e58-9299-47ed-8191-8ae8cf92e0d6/review">REVIEW 3.2 TB Data Quality</a> </div></div>
 	</div> <hr>
 	 	 	 <div class="section group">
 	<div class="col span_1_of_3"><div class="modules"><img src="images/mod4.png" width="1024" height="632" alt="Photo of a woman in a white hijab and patterned dress speaks at a podium with a microphone, presenting at an TB regional conference hosted by USAID."/></div></div>
@@ -126,7 +126,7 @@ s0.parentNode.insertBefore(s1,s0);
 	  <p><strong>🕓</strong><strong> Time to Complete</strong> 45 minutes<br>
 	  <br>
 	    <strong>Topics Covered:</strong> Data demand and use, barriers to data use, data visualizations, stakeholder buy-in, and disseminating M&amp;E results.</p>
-		  		  <a class="button" href="https://360.articulate.com/review/content/fb719eed-b973-4151-b895-1f1f725a364a/review">View Module 4</a>
+		  		  <a class="button" href="https://360.articulate.com/review/content/fb719eed-b973-4151-b895-1f1f725a364a/review">REView Module 4</a>
     </div>
 		</div></div>  <hr>
 	  	 	 	 <div class="section group">
