updated home page

--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@ s0.parentNode.insertBefore(s1,s0);
 	    <h3 id="m1">MINI-MODULE: Basics of TB: Epidemiology &amp; Case Definitions (optional)</h3>
 	    <p><strong>🕓</strong><strong> Time to Complete</strong>: 10 minutes</p>
 	    <p><strong>New to TB?</strong> This mini-module provides the basic facts about the TB epidemic, the epidemiology of TB as it relates to monitoring, evaluation and surveillance and the latest TB case classifications and definitions from the <a href="https://www.who.int/health-topics/tuberculosis#tab=tab_1" target="_blank">World Health Organization (WHO)</a>.</p>
-		  <a class="button" href="https://360.articulate.com/review/content/1f72cd66-2f57-444a-8873-90dbfaa8860a/review">Review Module</a> <a class="button" href="M1-mini-module/index.html#/">View MINI-Module</a>
+	    <a class="button" href="M1-mini-module/index.html#/">View MINI-Module</a>
 	  </div></div>
 	</div> 
 	  <div class="section group">
@@ -93,18 +93,17 @@ s0.parentNode.insertBefore(s1,s0);
 	    <h3 id="m1">MODULE 1: TB M&amp;E: An Overview</h3>
 	    <p><strong>🕓</strong><strong> Time to Complete</strong>: 10 minutes</p>
 	    <p><strong>Topics Covered</strong>:  WHO and USAID global TB strategies and targets, the basics of TB M&amp;E, including concepts such as M&amp;E systems, M&amp;E frameworks and illustrative TB indicator mapping to help contextualize the PBMEF. <strong> <br>
-	    </strong><a href="Tuberculosis-Case-Definitions.pdf" target="_blank"></a></p>
-		  <a class="button" href="https://360.articulate.com/review/content/d0ef2cc6-08bc-4b2c-87fc-4af0faa43334/review">Review Module</a>   <a class="button" href="M1/index.html">View Module 1</a>
+	    </strong><a href="Tuberculosis-Case-Definitions.pdf" target="_blank"></a></p><a class="button" href="M1/index.html">View Module 1</a>
 	  </div></div>
 	</div> 
 	 	 	<hr> <div class="section group">
 	<div class="col span_1_of_3"><div class="modules"><img src="images/mod2.png" alt="Illustration of a person working on a laptop, with a background detailing the PBMEF framework. The image highlights objectives such as Reach, Cure, Prevent, Innovate, and Sustain, along with associated indicator technical areas, project/program processes, and USAID targets."/></div></div>
 	<div class="col span_2_of_3"><div class="modules">
-      <h3 id="m2">MODULE 2: Using the Performance-Based M&amp;E Framework to Strengthen TB Programs</h3>
+      <h3 id="m2">MODULE 2: Using the PBMEF to Strengthen TB Programs</h3>
       <p>🕓<strong> Time to Complete</strong>: 20 minutes<br>
         <br>
         <strong>Topics Covered</strong>:
-		Components of USAID's Performance-Based M&amp;E framework, the essential indicator list, a deep dive into USAID's 10 Core indicators, and indicator cascades.</p>
+		Components of USAID's Performance-Based M&amp;E framework, the essential indicator list, a deep dive into USAID's 10 Core indicators, and constructing indicator cascades.</p>
 		  <a class="button" href="https://360.articulate.com/review/content/0eed2269-12a2-426f-b042-2f2f2e4306a0/review">REView Module 2</a></div>
 	</div>
 	</div> 
@@ -115,7 +114,7 @@ s0.parentNode.insertBefore(s1,s0);
 	  <h3 id="m3">MODULE: 3: Data Quality, Analysis, and Interpretation</h3>
 	  <p><strong>🕓 Time to Complete</strong>: 45 minutes<br>
         <br>
-        <strong>Topics Covered:</strong> Components of data quality, data analysis, cascade analysis, and root cause analysis.</p>
+        <strong>Topics Covered:</strong> The dimensions of data quality, data analysis, cascade analysis, and root cause analysis.</p>
 	   <a class="button" href="https://360.articulate.com/review/content/54b4e8b6-8f37-4ca3-bfe0-0861990dfe03/review">REVIEW 3.1 TB Data ANalysis</a><a class="button" href="https://360.articulate.com/review/content/b2852e58-9299-47ed-8191-8ae8cf92e0d6/review">REVIEW 3.2 TB Data Quality</a> </div></div>
 	</div> <hr>
 	 	 	 <div class="section group">
