--- a/M1/index.html
+++ b/M1/index.html
@@ -10,7 +10,9 @@
     <link type="text/css" rel="stylesheet" href="lib/icomoon.css">
     <script type="text/javascript" src="lib/player-0.0.11.min.js"></script>
     <script type="text/javascript" src="lib/lzwcompress.js"></script>
-    <script async src="https://tally.so/widgets/embed.js"></script>
+    <!-- Tally survey -->
+	  <script async src="https://tally.so/widgets/embed.js"></script>
+	  
     <!-- Resize Hack -->
     <script type="text/javascript">
       window.resizeTo(screen.width, screen.height);
@@ -21,7 +23,7 @@
     <![endif]-->
 
     <script id="__ENTRY__" type="application/json">
-      {".js":["rise/dca0e111.js"]}
+      {".js":["rise/71928633.js"]}
     </script>
 
     <script id="__REMOTE_ENTRIES__" type="application/json">
