update home with final exam

--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@ s0.parentNode.insertBefore(s1,s0);
 	  <p><strong>🕓</strong><strong> Time to Complete: </strong>15 minutes</p>
 	  <p>Pass the final exam and complete the course evaluation to receive a certificate of completion.<br>
 	    </p>
-	<a class="button" href="https://tally.so/r/3yDLy0">Course Evaluation</a>  
+	<a class="button" href="https://360.articulate.com/review/content/ed92701e-2c1f-49ba-9767-ee3fa8a8e667/review">Final Exam</a>&nbsp; <a class="button" href="https://tally.so/r/3yDLy0">Course Evaluation</a>  
       </div>
 		</div></div> 
 </div></div>
