--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
 	  <p><strong>🕓</strong><strong> Time to Complete</strong> 45 minutes<br>
 	  <br>
 	    <strong>Topics Covered:</strong> Data demand and use, barriers to data use, data visualizations, stakeholder buy-in, and disseminating M&amp;E results.</p>
-		  		  <a class="button" href="https://360.articulate.com/review/content/fb719eed-b973-4151-b895-1f1f725a364a/review">REView Module 4</a>
+		  		  <a class="button" href="M4/index.html">View Module 4</a>
     </div>
 		</div></div>  <hr>
 	  	 	 	 <div class="section group">
